Closed
Bug 1085203
Opened 11 years ago
Closed 10 years ago
Street names won't show in Google Maps in Firefox 33
Categories
(Core :: Graphics, defect)
Tracking
()
People
(Reporter: fmfreitas, Assigned: jgilbert)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
3.37 KB,
patch
|
jrmuizel
:
review+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
|
3.53 KB,
patch
|
jrmuizel
:
review+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:33.0) Gecko/20100101 Firefox/33.0
Build ID: 20141013145500
Steps to reproduce:
In Google Maps, switch to Earth mode and zoom in to, say, 100 meters.
Actual results:
Map is zoomed in correctly and text labels, markers are displayed as expected.
Expected results:
No street names are shown on the map. Also, that blue line won't show when the Pegman is being dragged over the map in areas eligible for Street View.
This issue doesn't happen with previous versions of Firefox. Tested on Win8.1 Pro / Win7 Ultimate.
WFM with FF33 on Win 7: http://i.imgur.com/U0g7RRF.jpg
Could you test:
1) in safe mode: https://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode
2) with a clean profile: https://support.mozilla.org/en-US/kb/profile-manager-create-and-remove-firefox-profiles
Does it work better?
Flags: needinfo?(lnwalker)
1) In Safe Mode, it works (I had tried that before), but Hardware Acceleration gets disabled. Browsing the maps gets slowed down a bit.
In Safe Mode, I have:
GPU Accelerated Windows: 0/1 Basic (OMTC)
whereas in Normal Mode:
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Pic (FF 33.0): http://s13.postimg.org/urgcxoss7/map1.png
Pic (FF 32.0.3): http://s7.postimg.org/p1dxquju3/map2.png
2) No, it didn't make any difference. Even with Portable versions, it doesn't work.
I also tested a Nightly build, but to no avail.
There must be something introduced in FF33 that is simply now causing this glitch on my system, since:
1) Previous versions of Firefox aren't affected;
2) This issue also doesn't happen with the Opera browser; meaning that the Direct3D interface is working properly on my system. Well, that's what I conjecture (as a programmer).
I had a feedback from a user on another forum (MozillaZine) about the same problem.
Flags: needinfo?(lnwalker)
I have an idea about the issue, it could be due to OMTC introduced in FF33.
Make a try:
1) Be sure hardware acceleration is enabled (in Options > Advanced > General)
2) Type about:config
3) Set layers.offmainthreadcomposition.enabled to false and restart Firefox
Is it better?
No, unfortunately it didn't help..
Now with that setting set to false, I have this:
GPU Accelerated Windows: 1/1 Direct3D 10
Anyways, take a look:
Pic (FF 33): http://s14.postimg.org/6e94tl2up/map3.png
This problem simply puzzles me.
Well, I guess you can enable HWA and OMTC again.
Did you test with a clean profile?
Yep, I did.
And like I said before, not even portable versions are free from this issue.
I am at a loss.
Comment 7•11 years ago
|
||
Reporter:
Is it possible that you are using 64bit builds because your UA string looks like 64bit ?
The safemode disables also the Javascript jit and this looks therefore like a jit issue.
Can you please test a 32bit build ?
Flags: needinfo?(lnwalker)
OK.
1) I've just installed 32-bit Firefox 33; it got installed by default in:
C:\Program Files (x86)\Mozilla Firefox
2) Created a new profile for use just with this new install.
The results are the same, unfortunately.
One thing draws my attention is that there is a difference between the two versions (33.0 and 32.0.3) when I enter/exit the Street View:
In FF 32.0.3, that animation that is like a spin or whirl (I don't know which word fits better) is present, whereas in FF 33 is not. That is, It enters/exits Street View directly without any animation.
I think that this detail is of somewhat importance.
Regards.
Flags: needinfo?(lnwalker)
Comment 9•11 years ago
|
||
I can reproduce this with Firefox trunk and Firefox33 on my system. Disabling Hardware acceleration+restart makes it work. Will do a regression range search in the next few hours.
My graphic card:
Adapter Description Intel(R) HD Graphics 4000
Adapter Description (GPU #2) NVIDIA GeForce GT 630M
Driver Date 3-26-2012
Driver Date (GPU #2) 7-2-2014
Driver Version 8.15.10.2712
Driver Version (GPU #2) 9.18.13.4052
Netwalker: which card and driver version are you using ?
| Reporter | ||
Comment 10•11 years ago
|
||
Oh, glad you could find something.
Here is the info you want:
Adapter Description NVIDIA GeForce GT 740
Adapter Drivers nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um
Adapter RAM 1024
Device ID 0x0fc8
Direct2D Enabled true
DirectWrite Enabled true (6.3.9600.17111)
Driver Date 9-13-2014
Driver Version 9.18.13.4411
GPU #2 Active false
GPU Accelerated Windows 1/1 Direct3D 11 (OMTC)
Vendor ID 0x10de
WebGL Renderer Google Inc. -- ANGLE (NVIDIA GeForce GT 740 Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote true
AzureCanvasBackend direct2d
AzureContentBackend direct2d
AzureFallbackCanvasBackend cairo
AzureSkiaAccelerated 0
I can also post all OpenGL GPU Capabilities if you consider relevant.. I think that my card is similar to yours.
Regards.
Comment 11•11 years ago
|
||
Last good revision: 81691a55e60f (2014-07-06)
First bad revision: 1dc6b294800d (2014-07-07)
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=81691a55e60f&tocha
nge=1dc6b294800d
I suspect bug 1010371 (Angle update)
Blocks: 1010371
Status: UNCONFIRMED → NEW
Component: Untriaged → Graphics
Ever confirmed: true
Product: Firefox → Core
Updated•11 years ago
|
Keywords: regression
Updated•11 years ago
|
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
status-firefox36:
--- → affected
tracking-firefox33:
--- → +
tracking-firefox34:
--- → +
tracking-firefox35:
--- → +
tracking-firefox36:
--- → +
Comment 12•11 years ago
|
||
(In reply to Netwalker from comment #10)
> Oh, glad you could find something.
>
> Here is the info you want:
>
> Adapter Description NVIDIA GeForce GT 740
> Adapter Drivers nvd3dumx,nvwgf2umx,nvwgf2umx
> nvd3dum,nvwgf2um,nvwgf2um
> Adapter RAM 1024
> Device ID 0x0fc8
> Direct2D Enabled true
> DirectWrite Enabled true (6.3.9600.17111)
> Driver Date 9-13-2014
> Driver Version 9.18.13.4411
> GPU #2 Active false
> GPU Accelerated Windows 1/1 Direct3D 11 (OMTC)
> Vendor ID 0x10de
> WebGL Renderer Google Inc. -- ANGLE (NVIDIA GeForce GT 740
> Direct3D9Ex vs_3_0 ps_3_0)
> windowLayerManagerRemote true
> AzureCanvasBackend direct2d
> AzureContentBackend direct2d
> AzureFallbackCanvasBackend cairo
> AzureSkiaAccelerated 0
>
>
> I can also post all OpenGL GPU Capabilities if you consider relevant.. I
> think that my card is similar to yours.
>
>
> Regards.
It is likely ANGLE. Out of curiosity, please update to driver 344.48 to see if it resolves.
| Reporter | ||
Comment 13•11 years ago
|
||
I've done so, but no joy. Thanks.
Comment 14•10 years ago
|
||
This patch seems to fix the problem.
Comment 15•10 years ago
|
||
Jeff, could you find someone to review this patch? I would like to take it for 33.1 if we move fast. Thanks
Flags: needinfo?(jmuizelaar)
Comment 16•10 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #15)
> Jeff, could you find someone to review this patch? I would like to take it
> for 33.1 if we move fast. Thanks
Sylvestre, this patch isn't really correct. It's more of a hack to make things work. We're working on getting something that we're more confident in.
Flags: needinfo?(jmuizelaar)
Comment 17•10 years ago
|
||
Someone mentioned in a meeting that Google may be fixing this on their end. Can anyone confirm that or give more details? Or, Jeff, if you do get a fix you're happy with I'd love to see it uplifted to 34. Thanks!
| Assignee | ||
Comment 18•10 years ago
|
||
(In reply to Liz Henry :lizzard from comment #17)
> Someone mentioned in a meeting that Google may be fixing this on their end.
> Can anyone confirm that or give more details? Or, Jeff, if you do get a
> fix you're happy with I'd love to see it uplifted to 34. Thanks!
I'm working on getting it uplifted today.
| Assignee | ||
Comment 19•10 years ago
|
||
Assignee: nobody → jgilbert
Attachment #8514624 -
Attachment is obsolete: true
Attachment #8516985 -
Flags: review?(jmuizelaar)
| Assignee | ||
Comment 20•10 years ago
|
||
Comment 21•10 years ago
|
||
Comment on attachment 8516985 [details] [diff] [review]
beta patch
Review of attachment 8516985 [details] [diff] [review]:
-----------------------------------------------------------------
I guess so.
Attachment #8516985 -
Flags: review?(jmuizelaar) → review+
Updated•10 years ago
|
Attachment #8516994 -
Flags: review+
Comment 22•10 years ago
|
||
It is clearly too late for 33.
Jeff, what are your plans for this patch? It might be too late for beta but having it in aurora could be nice!
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 23•10 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #22)
> It is clearly too late for 33.
> Jeff, what are your plans for this patch? It might be too late for beta but
> having it in aurora could be nice!
I thought we landed these. :(
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 24•10 years ago
|
||
Comment on attachment 8516985 [details] [diff] [review]
beta patch
Approval Request Comment
[Feature/regressing bug #]: ANGLE update
[User impact if declined]: Degraded experience on Google Maps, likely others.
[Describe test coverage new/current, TBPL]: I'm working on it. We tested this manually.
[Risks and why]: Low. This is a very targeted fix.
[String/UUID change made/needed]: none
Attachment #8516985 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 25•10 years ago
|
||
I think we should take bug 1096634 instead on Aurora.
See Also: → 1096634
Comment 26•10 years ago
|
||
Comment on attachment 8516985 [details] [diff] [review]
beta patch
This is a very noticeable regression. Beta+
Attachment #8516985 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 28•10 years ago
|
||
https://hg.mozilla.org/releases/mozilla-beta/rev/9813d3c50119
Jeff, in the future, please try to remember to include commit messages with your patches.
Per comment 25, marking as fixed on trunk by bug 1096634.
Updated•10 years ago
|
Flags: qe-verify+
| Assignee | ||
Comment 29•10 years ago
|
||
(In reply to [Away 18-Nov to 23-Nov] Ryan VanderMeulen [:RyanVM UTC-5] from comment #28)
> https://hg.mozilla.org/releases/mozilla-beta/rev/9813d3c50119
>
> Jeff, in the future, please try to remember to include commit messages with
> your patches.
>
> Per comment 25, marking as fixed on trunk by bug 1096634.
I'll try to do this for uplifts, but regular patches don't need this, IMO.
Comment 30•10 years ago
|
||
We've done some testing for this issue using Firefox 34 Beta 10 (BuildID=20141117202603). Testing covered verification of this issue, and exploratory testing for Google Maps. Exploratory testing revealed no new issues, while street names showed up just fine on most systems (Intel, AMD, NVidia were covered).
There is however the ATI Radeon 3000 for which the street names still do NOT show in earth view. Note that this video card also had problems with bug 1090338, which now NO longer show, and is still having problems with some WebGL content (see bug 1087932). The issue with street names not showing was confirmed on multiple OSs and multiple machines with this video card. All these seem to point to some problem specific to the ATI Radeon 3000 video card.
Jeff, do you need more info on this, or should we maybe file a separate bug specific to ATI Radeon 3000?
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 31•10 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) from comment #30)
> We've done some testing for this issue using Firefox 34 Beta 10
> (BuildID=20141117202603). Testing covered verification of this issue, and
> exploratory testing for Google Maps. Exploratory testing revealed no new
> issues, while street names showed up just fine on most systems (Intel, AMD,
> NVidia were covered).
>
> There is however the ATI Radeon 3000 for which the street names still do NOT
> show in earth view. Note that this video card also had problems with bug
> 1090338, which now NO longer show, and is still having problems with some
> WebGL content (see bug 1087932). The issue with street names not showing was
> confirmed on multiple OSs and multiple machines with this video card. All
> these seem to point to some problem specific to the ATI Radeon 3000 video
> card.
>
> Jeff, do you need more info on this, or should we maybe file a separate bug
> specific to ATI Radeon 3000?
Please file a separate bug.
Flags: needinfo?(jgilbert)
Comment 32•10 years ago
|
||
(In reply to Jeff Gilbert [:jgilbert] from comment #31)
> (In reply to Florin Mezei, QA (:FlorinMezei) from comment #30)
> > We've done some testing for this issue using Firefox 34 Beta 10
> > (BuildID=20141117202603). Testing covered verification of this issue, and
> > exploratory testing for Google Maps. Exploratory testing revealed no new
> > issues, while street names showed up just fine on most systems (Intel, AMD,
> > NVidia were covered).
> >
> > There is however the ATI Radeon 3000 for which the street names still do NOT
> > show in earth view. Note that this video card also had problems with bug
> > 1090338, which now NO longer show, and is still having problems with some
> > WebGL content (see bug 1087932). The issue with street names not showing was
> > confirmed on multiple OSs and multiple machines with this video card. All
> > these seem to point to some problem specific to the ATI Radeon 3000 video
> > card.
> >
> > Jeff, do you need more info on this, or should we maybe file a separate bug
> > specific to ATI Radeon 3000?
>
> Please file a separate bug.
I filled bug 1101427.
Comment 34•10 years ago
|
||
Jeff, could you give me some details, please:
1) this current bug fixed in Beta a similar issue about GG Maps in bug 1089139 (which I duped).
2) In Nightly, bug 1089139 is fixed by 912196 (I used mozregression).
3) But in Aurora, bug 1089139 is still present. Do you know if bug 1096634 will fix Aurora as you said in comment #25?
Flags: needinfo?(jgilbert)
Comment 35•10 years ago
|
||
I think we need a Beta35 approval request on the Aurora patch here still? :)
Updated•10 years ago
|
Flags: needinfo?(jgilbert)
Updated•10 years ago
|
Flags: needinfo?(jgilbert)
Comment 36•10 years ago
|
||
Milan, can you please help move this along? Not a fan of wasting precious beta testing time.
Flags: needinfo?(milan)
| Assignee | ||
Updated•10 years ago
|
Attachment #8516994 -
Attachment description: aurora patch → fx35 patch
Flags: needinfo?(jgilbert)
| Assignee | ||
Comment 38•10 years ago
|
||
Comment on attachment 8516994 [details] [diff] [review]
fx35 patch
Approval Request Comment
[Feature/regressing bug #]: ANGLE update
[User impact if declined]: No street names on Google maps on Windows for many users.
[Describe test coverage new/current, TBPL]: Already present on Release.
[Risks and why]: Very low.
[String/UUID change made/needed]: none
Attachment #8516994 -
Flags: approval-mozilla-beta?
Updated•10 years ago
|
Attachment #8516994 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 39•10 years ago
|
||
Comment 40•10 years ago
|
||
I was able to reproduce this issue on Firefox 36.0a1 (2014-10-25) using Windows 8.1 x86.
Verified fixed on Firefox 35 Beta 4 (20141216120925) using Windows 8.1 x86 and Windows 7 x64.
You need to log in
before you can comment on or make changes to this bug.
Description
•