Bug 1085203 - Street names won't show in Google Maps in Firefox 33. r=jmuizelaar, a=lmandel